--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "axios": "^1.6.7",
     "vue": "^3.4.21"
   },
   "devDependencies": {
