--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --open",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^7.2.0",
