--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "axios": "^1.6.7",
-    "vue": "^3.4.21",
-    "element-plus": "2.6.1"
+    "element-plus": "2.6.1",
+    "vue": "^3.4.21"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
@@ -52,6 +53,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
   }
 }
