--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.4.35",
     "postcss-html": "^1.6.0",
     "postcss-scss": "^4.0.9",
@@ -53,6 +54,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6",
+    "vite-plugin-mock": "^3.0.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.27"
   }
