--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "axios": "^1.6.7",
     "element-plus": "2.6.1",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.10",
