--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+pnpm-lock.yaml
+.gitignore
+pnpm-lock.yaml
+.gitignore
+src/api/user/index copy mock.ts
+src/api/user/type copy mock.ts
+pnpm-lock.yaml
+.gitignore
