--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "axios": "^1.6.7",
+    "echarts": "^5.5.0",
+    "echarts-liquidfill": "^3.1.0",
     "element-plus": "2.6.1",
     "moment": "^2.30.1",
     "nprogress": "^0.2.0",
