--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/eslint-parser": "^7.23.10",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "autoprefixer": "^10.4.18",
